# Crypto-automation

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  forecast_agent.py  macro_analyst.py  news_analyst.py  report_agent.py  risk_analyst.py  schemas.py  sentiment_analyst.py  technical_analyst.py
backend/app/analysis/: __init__.py  indicators.py  patterns.py  risk_metrics.py
backend/app/api/v1/: analysis.py  auth.py  coins.py  forecasts.py  market.py  news.py  portfolio.py  router.py  users.py  watchlist.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging_config.py  security.py
backend/app/integrations/: __init__.py  coingecko.py  openai_client.py  supabase_client.py
backend/app/models/: __init__.py  analysis.py  base.py  coin.py  news.py  portfolio.py  user.py  watchlist.py
backend/app/schemas/: __init__.py  analysis.py  coin.py  common.py  market.py  news.py  portfolio.py  user.py  watchlist.py
backend/app/services/: __init__.py  coin_service.py  market_service.py
backend/app/workers/: __init__.py
backend/app/workers/jobs/: __init__.py  price_fetcher.py
backend/tests/: conftest.py
database/: schema.sql
docs/: API.md  DEPLOYMENT.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  page.tsx  (+4 more)
(+73 files in other folders)
