[project]
name = "crypto-intelligence-api"
version = "1.0.0"
description = "AI Crypto Intelligence Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "slowapi>=0.1.9",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "openai>=1.55.0",
    "TA-Lib>=0.6.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "prophet>=1.1.5",
    "supabase>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
